--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                 <input type="text" id="text">
             </div>
         
-            <div class="wrapper-2">
+            <div class="wrapper">
                 <button id="generateAudio">Gerar fala(s)</button>
             </div>
             
