--- a/static/styles.css
+++ b/static/styles.css
@@ -113,10 +113,21 @@ header a {
 .input-container {
     display: flex;
     flex-direction: column;
+}
+
+.primary-container {
     padding: 12px;
     border: 1px solid #748180;
     border-radius: 7px;
     background-color: #363636;
+}
+
+.secondary-container {
+    padding: 12px;
+    border: 4px solid #748180;
+    border-radius: 7px;
+    background-color: #363636;
+    min-height: 100px;
 }
 
 .audio-list-container {
@@ -129,11 +140,6 @@ header a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 48px;
-    padding: 12px;
-    border: 4px solid #748180;
-    border-radius: 7px;
-    background-color: #363636;
-    min-height: 100px;
 }
 
 .audio-files-container > div {
@@ -146,10 +152,16 @@ header a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 4px;
     padding: 4px;
     border: 1px solid #748180;
     border-radius: 7px;
     background-color: #505050;
+}
+
+.audio-container .audio-actions {
+    display: flex;
+    gap: 4px;
 }
 
 .audio-container .audio-button-play,
