Atualizando DB e funcionalidades

--- a/templates/voices.html
+++ b/templates/voices.html
@@ -31,11 +31,11 @@
 
                 <div class="input-container text">
                     <input type="text" id="text">
-                    <button>Gerar vozes</button>
+                    <button id="generateAudio">Gerar vozes</button>
                 </div>
             </div>
 
-            <div id="new-voices-container" class="secondary-container">
+            <div id="new-voices-container">
             </div>
         </div>
         
