--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     gap: 40px;
     font-family: Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0 20px;
+    margin: 0px;
     color: #FFFFFF;
     background-color: #262627;
 }
@@ -108,6 +108,12 @@ header a {
 
 .drop-area input[type="file"] {
     display: none;
+}
+
+.vertical-elements {
+    display: flex;
+    flex-direction: column;
+    gap: 12px
 }
 
 .input-container {
