--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,8 @@
                 </div>
     
                 <div class="input-container primary-container">
-                    <label for="emotion">Select Emotion</label>
-                    <select id="emotion">
-                        <option value="happysouls_1">Normal</option>
+                    <label for="emotions">Select Emotion</label>
+                    <select id="emotions">
                     </select>
                 </div>
         
@@ -59,6 +58,13 @@
                 <div class="input-container">
                     <label for="filter_voice">Voice</label>
                     <select id="filter_voice">
+                        <option value="all">All</option>
+                    </select>
+                </div>
+
+                <div class="input-container">
+                    <label for="filter_emotion">Voice</label>
+                    <select id="filter_emotion">
                         <option value="all">All</option>
                     </select>
                 </div>
